Salesforce Code/force-app/main/default/objects/Case/fields/Reply__c.field-meta.xml
<CustomField>
    <fullName>Reply__c</fullName>
    <label>Reply</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>