Salesforce Code/force-app/main/default/objects/Case/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review</label>
    <referenceTo>Review__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>